--- a/TextChatMeow/TextChatMeow.csproj
+++ b/TextChatMeow/TextChatMeow.csproj
@@ -307,18 +307,28 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\SystemMessageSender.cs" />
-    <Compile Include="Commands\IChatCommand.cs" />
-    <Compile Include="Commands\CommandTools.cs" />
+    <Compile Include="Commands\CommandUtilities.cs" />
+    <Compile Include="Commands\ProximityChat.cs" />
+    <Compile Include="Commands\PublicChat.cs" />
+    <Compile Include="Commands\RadioChat.cs" />
+    <Compile Include="Commands\TeamChat.cs" />
     <Compile Include="MessageHandler\DisplayManager.cs" />
     <Compile Include="MessageHandler\MessagesList.cs" />
+    <Compile Include="Model\AbstractChatMessage.cs" />
+    <Compile Include="Model\ProximityChatMessage.cs" />
+    <Compile Include="Model\PublicChatMessage.cs" />
+    <Compile Include="Model\RadioChatMessage.cs" />
+    <Compile Include="Model\SystemChatMessage.cs" />
+    <Compile Include="Model\TeamChatMessage.cs" />
     <Compile Include="Plugin.cs" />
-    <Compile Include="Commands\Commands.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="MessageHandler\MessageClass.cs" />
+    <Compile Include="Enum\ChatMessageType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
